--- a/demo03/src/python/templates/hello.html
+++ b/demo03/src/python/templates/hello.html
@@ -1,9 +1,10 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Hello, {{ name }}!</title>
-    </head>
-    <body>
-        <h1>Hello, {{ name }}!</h1>
-    </body>
-</html>
+{% extends 'base.html' %}
+
+{% block title %}Hello, {{ name }}!{% endblock %}
+
+{% block content %}
+<h1>Hello, {{ name }}!</h1>
+<p>
+    This is the Hello page.
+</p>
+{% endblock %}
